fix issue on carousel swiping on mobile resolution

--- a/src/components/HomePage/Carousel/Carousel.module.css
+++ b/src/components/HomePage/Carousel/Carousel.module.css
@@ -111,8 +111,8 @@
     text-align: center;
     height: 33vh;
     margin: 0;
+    margin-left: 10px;
     overflow: auto;
-    margin-left: 70px;
   }
 
   .cardContainer img {
